@@ -1194,7 +1194,8 @@ public class HFile {
           return null;
         }
         return new KeyValue(this.block.array(),
-            this.block.arrayOffset() + this.block.position() - 8);
+            this.block.arrayOffset() + this.block.position() - 8,
+            this.currKeyLen+this.currValueLen+8);
       }
 
       public ByteBuffer getKey() {
@@ -1238,16 +1239,17 @@ public class HFile {
             return false;
           }
           block = reader.readBlock(this.currBlock, this.cacheBlocks, this.pread);
-          currKeyLen = block.getInt();
-          currValueLen = block.getInt();
+          currKeyLen = Bytes.toInt(block.array(), block.arrayOffset()+block.position(), 4);
+          currValueLen = Bytes.toInt(block.array(), block.arrayOffset()+block.position()+4, 4);
+          block.position(block.position()+8);
           blockFetches++;
           return true;
         }
         // LOG.debug("rem:" + block.remaining() + " p:" + block.position() +
         // " kl: " + currKeyLen + " kv: " + currValueLen);
-
-        currKeyLen = block.getInt();
-        currValueLen = block.getInt();
+        currKeyLen = Bytes.toInt(block.array(), block.arrayOffset()+block.position(), 4);
+        currValueLen = Bytes.toInt(block.array(), block.arrayOffset()+block.position()+4, 4);
+        block.position(block.position()+8);
         return true;
       }
 
