@@ -397,7 +397,7 @@ public class MemStore implements HeapSize {
         KeyValue kv = it.next();
 
         // if this isnt the row we are interested in, then bail:
-        if (!firstKv.matchingRow(kv)) {
+        if (!firstKv.matchingColumn(family,qualifier) || !firstKv.matchingRow(kv) ) {
           break; // rows dont match, bail.
         }
 
@@ -430,7 +430,7 @@ public class MemStore implements HeapSize {
         }
 
         // if this isnt the row we are interested in, then bail:
-        if (!firstKv.matchingRow(kv)) {
+        if (!firstKv.matchingColumn(family,qualifier) || !firstKv.matchingRow(kv)) {
           break; // rows dont match, bail.
         }
 
